--- a/boards/shields/numpad-generic/numpad-generic.conf
+++ b/boards/shields/numpad-generic/numpad-generic.conf
@@ -1,3 +1,4 @@
 CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_KEYBOARD_NAME="Generic Numpad!"
 CONFIG_BT_DEVICE_NAME="Generic Numpad!"
 CONFIG_BT_DIS_MODEL="Generic Numpad!"
