--- a/boards/shields/generic-numpad/generic-numpad.conf
+++ b/boards/shields/generic-numpad/generic-numpad.conf
@@ -1,6 +1,6 @@
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_KEYBOARD_NAME="Generic Numpad!"
-CONFIG_BT_DEVICE_NAME="Right Hand 6x6"
-CONFIG_BT_DIS_MODEL="Generic Numpad!"
+CONFIG_BT_DEVICE_NAME="cornish toggle"
+CONFIG_BT_DIS_MODEL="cornish toggle"
 CONFIG_BT_MAX_CONN=3
 CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=512
